concord_macros/tests/dsl/fail/fail_secret_in_policy_expr.stderr
error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/dsl/fail/fail_secret_in_policy_expr.rs:12:33
   |
12 |     header "X-Api-Key" = secret.api_key
   |                                 ^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_in_policy_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
